--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -15,9 +15,10 @@
         <div>
             <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
             <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-            <button id="addQuote">Add Quote</button>
+            <button onclick="addQuote()">Add Quote</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
   </html>
