--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-  <html lang="en">
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Dynamic Quote Generator</title>
   </head>
   <body>
-      <div class="container">
-        <h1>Dynamic Quote Generator</h1>
-        <div id="quoteDisplay">Your quote will appear here.</div>
-        <button id="newQuote">Show New Quote</button>
-        <div>
-            <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-            <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-            <button onclick="addQuote()">Add Quote</button>
-        </div>
+    <div class="container">
+      <h1>Dynamic Quote Generator</h1>
+      <div id="quoteDisplay">Your quote will appear here.</div>
+      <button id="newQuote">Show New Quote</button>
+      <div id="newElement"></div>
+      <div>
+        <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+        <input
+          id="newQuoteCategory"
+          type="text"
+          placeholder="Enter quote category"
+        />
+        <button onclick="addQuote()">Add Quote</button>
       </div>
+    </div>
     <script src="script.js"></script>
-</body>
-
-  </html>
+  </body>
+</html>
