--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,25 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
     <title>Dynamic Quote Generator</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Dynamic Quote Generator</h1>
-      <div id="quoteDisplay">Your quote will appear here.</div>
-      <button id="newQuote">Show New Quote</button>
-      <div id="newElement"></div>
-      <div>
-        <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-        <input
-          id="newQuoteCategory"
-          type="text"
-          placeholder="Enter quote category"
-        />
-        <button onclick="addQuote()">Add Quote</button>
-      </div>
-    </div>
+    <br />
+    <h1>Dynamic Quote Generator</h1>
+    <div id="quoteDisplay"></div>
+    <br />
+    <button id="newQuote">Show New Quote</button>
+    <br />
+    <input
+      type="file"
+      id="importFile"
+      accept=".json"
+      onchange="importFromJsonFile(event)"
+    />
+    <br />
+    <button id="expBTN">Export Quotes</button>
+    <br /><br />
+
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+      <!-- Dynamically populated categories -->
+    </select>
+    <br />
+    <br />
+
     <script src="script.js"></script>
   </body>
 </html>
